# models/contact.js
@@ -1,11 +1,12 @@
+// models/contact.js
 const mongoose = require('mongoose');
 
 const contactSchema = new mongoose.Schema({
-  firstName: { type: String, required: true },
-  lastName: String,
-  email: { type: String, required: true },
-  favoriteColor: String,
-  birthday: String
+  firstName:   { type: String, required: true },
+  lastName:    { type: String },
+  email:       { type: String, required: true },
+  favoriteColor: { type: String },
+  birthday:    { type: Date }
 });
 
 module.exports = mongoose.model('Contact', contactSchema);
